--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,8 @@
     <string name="app_name">AppObserver</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="startScan">Start Scan</string>
     <string name="deleted">Deleted</string>
-    <string name="installed">Installed</string>
+    <string name="newApp">New</string>
     <string name="noChanges">No changes</string>
 </resources>
